--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^9.0.4",
+    "is-ua-webview": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.43.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
